Fix to try `vh` on iOS

--- a/assets/css/extended/custom_.css
+++ b/assets/css/extended/custom_.css
@@ -825,7 +825,7 @@ html:not(.page-index) .index-page-intro-container {
 }
 
 [data-os="ios"].page-index .index-page-intro-container {
-    height: 100dvh;
+    height: 100vh;
 }
 
 @keyframes rotate360 {
@@ -1015,8 +1015,7 @@ html:not(.page-index) .index-page-intro-container {
 }
 
 [data-os="ios"].page-index .index-page-intro-container .index-page-content-bg-cover {
-    height: 100dvh;
-    background: linear-gradient(180deg, #000 18%, #15ff00c7 42%, #003db6fd 85%);
+    height: 100vh;
 }
 
 .page-index .dark .index-page-intro-container .index-page-content-bg-cover {
